Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

8th October 2008 - FreeRapid Downloader 0.65 released
  Added : plugins - support for letibit.com [FS#25 - requested by Chris C., implemented by Lukiz] 
  Added : plugins - support for egoshare.com, share-online.biz, easy-share.com [implemented by Lukiz]
  Added : plugins - support for megarotic.com and sexuploader.com [FS#24 - requested by Anonymous, implemented by Lukiz]   
  Added : new keystroke for Resume action - SPACE key
  Added : new alternative keystroke for Open file/Show Information dialog - ENTER key
  Added : possibility to import (with clipboard monitoring) or paste links without 'http://' at the beginning         
  Added : Sort by name function - available from Downloads menu - ctrl+S [requested by ATom]
  Added : link to the Flash video on the web from Help menu
  Added : option to remove files after completion (NEVER, IMMEDIATELY, AT STARTUP)
  Added : option to minimize to tray on close
  Added : option to disable using default connection (warning: only connections from proxy list will be used)
  Added : possibility to set proxy settings for default connection 
  Added : support to set application property from command line (mostly for debug or testing purposes)
  Added : Czech translation [thanks to Lukiz&Kajda!] - more translations will come soon
  Added : option to select language (translation) for application
  Changed : improved searching for free available net port on localhost for creating only one instance of the application
  Changed : average speed and duration time attributes on completed file are stored [requested by Chris C.]
  Changed : small redesign of Appearance panel in User Preferences dialog
  Changed : improved pre-allocation files (less file fragmentation)
  Changed : minor changes in RapidShare, FileFactory, Megaupload, Uploaded.to plugins
  Changed : plugin extension was renamed from .zip to .frp