@@ -1,5 +1,5 @@
 Application.id = FRD
-Application.version = 0.64
+Application.version = 0.65
 Application.title = FreeRapid Downloader ${Application.version} by Vity
 Application.vendor = Vity
 Application.vendorId = VitySoft
