@@ -357,4 +357,14 @@ public class Swinger {
 //    }
 //
 
+    public static int[] getSelectedRows(final JTable table) {
+        final int[] ints = table.getSelectedRows();
+
+        for (int i = 0; i < ints.length; i++) {
+            ints[i] = table.convertRowIndexToModel(ints[i]);
+        }
+        return ints;
+    }
+
+
 }
